完成第一部分